dnl
dnl dhcpdump configure.in. Scary... very scary.
dnl

AC_INIT(dhcpdump.c)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL

dnl
dnl some function sunos/solaris does't have
dnl
AC_CHECK_FUNCS(strsep,AC_DEFINE(HAVE_STRSEP))

AM_INIT_AUTOMAKE(dhcpdump, 1.4)

AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS([stdlib.h string.h])

AC_CHECK_FUNCS([regcomp])


AC_OUTPUT(Makefile)
